samples/_failures_safe/1761092510_63afdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11dc3b86.c: In function ‘main’:
./samples/SAFE/__tmp_11dc3b86.c:125:17: error: expected expression at end of input
  125 |                 for (int j = 0; j < cols2;
      |                 ^~~
./samples/SAFE/__tmp_11dc3b86.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11dc3b86.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11dc3b86.c:125:17: error: expected declaration or statement at end of input
